fixing initial zoom on mobile

--- a/style.css
+++ b/style.css
@@ -260,9 +260,6 @@ h1 {
     margin-left: 25%;
   }
 
-  #aboutPic {
-  }
-
   #aboutPic p {
     margin-left: 35%;
     /* margin-right: 20%; */
